# self-evolution-ds-agent

./: .gitignore  CONFIGURATION.md  README.md  download_notebooks.py  install.sh  pyproject.toml
.autods/skills/autods-kaggle-distilled/: SKILL.md
agentic-kaggle-skill/: README.md  SKILL.md
distillation/: coverage_manifest.csv
distillation/reports/: first_distillation_v1.md
distillation/v2/: competition_evolution_traces.json  summary.json
distillation/v3/: README.md
docs/: buddy.md  configuration.md  coordinator.md  memory.md  sandbox.md  skills.md
offline/: README.md  download_notebooks.py
offline/distillation/: all_scored.csv  core_manifest.csv  rejected_or_unused.csv  summary.json
offline/tools/: build_v4_evidence_packs.py  distill_v2_evolution_traces.py  distill_v3_llm_semantic.py  prepare_distillation_corpus.py
src/buddy/: commands.py  companion.py  observer.py  prompt.py  render.py  sprites.py  storage.py  types.py
src/commands/: __init__.py
src/core/: config.py  context.py  engine.py  llm.py  session.py
src/features/: compact.py  coordinator.py  cost_tracker.py  memory.py  online_evolution.py  plan.py  skills.py  skills_bundled.py  todo.py
src/tools/: __init__.py  ask_user.py  bash.py  todo.py
src/tui/: app.py  prompt.py  query.py  rendering.py
tests/: test_config.py  test_context.py  test_coordinator.py  test_cost_tracker.py  test_engine.py  test_llm.py  test_online_evolution.py  test_plan.py  test_sandbox_integration.py  test_sandbox_wrapper.py  test_session_mode.py  test_skills.py  test_todo.py
tools/: distill_v3_llm_semantic.py
(+771 files in other folders)
