[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mantis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "kaggle>=1.6.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "kaggle>=1.6.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.scripts]
mantis = "tui.app:main"
autods = "tui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/services", "src/features", "src/tui", "src/commands", "src/buddy", "src/sandbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
